--- a/results/publication/generate_publication_figures.Rmd
+++ b/results/publication/generate_publication_figures.Rmd
@@ -128,8 +128,10 @@ combined_df %>%
   summarise(mean = mean(total_feats), sd=sd(total_feats)) %>%
   knitr::kable(caption = "Total NonZero Features Per Sample")
 
-ggplot(combined_df, aes(x=depth, y=total_feats, fill=depth)) +
-  geom_boxplot() +
+ggplot(combined_df, aes(x=depth, y=total_feats)) +
+  geom_violin(alpha=0.5, fill="grey") +
+  geom_boxplot(width=0.1, fill="grey") +
+  # scale_fill_grey(start = 0, end = .9) +
   labs(x="Insilico Sampling Depth", y="Total Non-Zero Features") +
   theme(panel.background = element_rect(fill = "white", colour = "grey50"),
         axis.title = element_text(size=18),
@@ -145,8 +147,9 @@ ggsave(pfile, plot = p1, width = 15, height = 10, units = "in")
 
 #### Overlap + Correlation of Features at Varying Depths
 ```{r}
-ggplot(stats_df, aes(x=depth, y=union_feats, fill=depth)) +
-  geom_boxplot() +
+ggplot(stats_df, aes(x=depth, y=union_feats)) +
+  geom_violin(alpha=0.5, fill="grey") +
+  geom_boxplot(width=0.1, fill="grey") +
   labs(x="Insilico Sampling Depth", y="Union Identified Features") +
   theme(panel.background = element_rect(fill = "white", colour = "grey50"),
         axis.title = element_text(size=18),
@@ -161,8 +164,9 @@ ggsave(pfile, plot = p2, width = 15, height = 10, units = "in")
 ```
 
 ```{r}
-ggplot(stats_df, aes(x=depth, y=common_feats, fill=depth)) +
-  geom_boxplot() +
+ggplot(stats_df, aes(x=depth, y=common_feats)) +
+  geom_violin(alpha=0.5, fill="grey") +
+  geom_boxplot(width=0.1, fill="grey") +
   labs(x="Insilico Sampling Depth", y="Overlapping Features") +
   theme(panel.background = element_rect(fill = "white", colour = "grey50"),
         axis.title = element_text(size=18),
@@ -177,8 +181,9 @@ ggsave(pfile, plot = p3, width = 15, height = 10, units = "in")
 ```
 
 ```{r}
-ggplot(stats_df, aes(x=depth, y=jaccard, fill=depth)) +
-  geom_boxplot() +
+ggplot(stats_df, aes(x=depth, y=jaccard)) +
+  geom_violin(alpha=0.5, fill="grey") +
+  geom_boxplot(width=0.1, fill="grey") +
   labs(x="Insilico Sampling Depth", y="Jaccard Distance") +
   theme(panel.background = element_rect(fill = "white", colour = "grey50"),
         axis.title = element_text(size=18),
@@ -193,8 +198,9 @@ ggsave(pfile, plot = p4, width = 15, height = 10, units = "in")
 ```
 
 ```{r}
-ggplot(stats_df, aes(x=depth, y=cor, fill=depth)) +
-  geom_boxplot() +
+ggplot(stats_df, aes(x=depth, y=cor)) +
+  geom_violin(alpha=0.5, fill="grey") +
+  geom_boxplot(width=0.1, fill="grey") +
   labs(x="Insilico Sampling Depth", y="Pearson's Correlation") +
   theme(panel.background = element_rect(fill = "white", colour = "grey50"),
         axis.title = element_text(size=18),
@@ -217,8 +223,9 @@ seed_combined_df %>%
   summarise(mean = mean(total_feats), sd=sd(total_feats)) %>%
   knitr::kable(caption = "Total NonZero Features Per Sample")
 
-ggplot(seed_combined_df, aes(x=seed, y=total_feats, fill=seed)) +
-  geom_boxplot() +
+ggplot(seed_combined_df, aes(x=seed, y=total_feats)) +
+  geom_violin(alpha=0.5, fill="grey") +
+  geom_boxplot(width=0.1, fill="grey") +
   labs(x="Insilico Sampling Seed", y="Total Non-Zero Features") +
   theme(panel.background = element_rect(fill = "white", colour = "grey50"),
         axis.title = element_text(size=18),
@@ -234,8 +241,9 @@ ggsave(pfile, plot = p6, width = 15, height = 10, units = "in")
 
 #### Overlap + Correlation of Features at Varying Depths
 ```{r}
-ggplot(seed_stats_df, aes(x=seed, y=union_feats, fill=seed)) +
-  geom_boxplot() +
+ggplot(seed_stats_df, aes(x=seed, y=union_feats)) +
+  geom_violin(alpha=0.5, fill="grey") +
+  geom_boxplot(width=0.1, fill="grey") +
   labs(x="Insilico Sampling Seed", y="Union Identified Features") +
   theme(panel.background = element_rect(fill = "white", colour = "grey50"),
         axis.title = element_text(size=18),
@@ -250,8 +258,9 @@ ggsave(pfile, plot = p7, width = 15, height = 10, units = "in")
 ```
 
 ```{r}
-ggplot(seed_stats_df, aes(x=seed, y=common_feats, fill=seed)) +
-  geom_boxplot() +
+ggplot(seed_stats_df, aes(x=seed, y=common_feats)) +
+  geom_violin(alpha=0.5, fill="grey") +
+  geom_boxplot(width=0.1, fill="grey") +
   labs(x="Insilico Sampling Seed", y="Overlapping Features") +
   theme(panel.background = element_rect(fill = "white", colour = "grey50"),
         axis.title = element_text(size=18),
@@ -266,8 +275,9 @@ ggsave(pfile, plot = p8, width = 15, height = 10, units = "in")
 ```
 
 ```{r}
-ggplot(seed_stats_df, aes(x=seed, y=jaccard, fill=seed)) +
-  geom_boxplot() +
+ggplot(seed_stats_df, aes(x=seed, y=jaccard)) +
+  geom_violin(alpha=0.5, fill="grey") +
+  geom_boxplot(width=0.1, fill="grey") +
   labs(x="Insilico Sampling Seed", y="Jaccard Distance") +
   theme(panel.background = element_rect(fill = "white", colour = "grey50"),
         axis.title = element_text(size=18),
@@ -282,8 +292,9 @@ ggsave(pfile, plot = p9, width = 15, height = 10, units = "in")
 ```
 
 ```{r}
-ggplot(seed_stats_df, aes(x=seed, y=cor, fill=seed)) +
-  geom_boxplot() +
+ggplot(seed_stats_df, aes(x=seed, y=cor)) +
+  geom_violin(alpha=0.5, fill="grey") +
+  geom_boxplot(width=0.1, fill="grey") +
   labs(x="Insilico Sampling Seed", y="Pearson's Correlation") +
   theme(panel.background = element_rect(fill = "white", colour = "grey50"),
         axis.title = element_text(size=18),
@@ -318,7 +329,7 @@ ggsave(pfile, plot = pm2, width = 15, height = 10, units = "in")
 
 ### Differential Experession Analysis Grid Plots
 ```{r}
-pm2 <- ggpubr::ggarrange(plotlist = lapply(list(ptax6, ptax2, pca1p, pca2p), function(p){p+theme(plot.margin = unit(c(1,1,1,1), "cm"))}), labels=c("A", "B", "C", "D"), ncol=2, nrow=2)
+pm2 <- ggpubr::ggarrange(plotlist = lapply(list(ptax6, p10_lm_de_vol, pca1p, pca2p), function(p){p+theme(plot.margin = unit(c(1,1,1,1), "cm"))}), labels=c("A", "B", "C", "D"), ncol=2, nrow=2)
 pm2
 pfile <- "./results/publication/figures/50K_lm_de_figure_3_grid.png"
 message(sprintf("Saved figure as: %s", pfile))
@@ -405,6 +416,7 @@ Looking at the distribution of the log transformed data, using a linear model pr
 ```{r}
 # Run linear model
 lm_prep %>%
+  # dplyr::mutate(value=log2(value+1)) %>%
   dplyr::group_by(feature) %>%
   dplyr::group_map(do_lm, .keep=TRUE) %>%
   data.table::rbindlist() -> lm_dt
@@ -438,6 +450,24 @@ lm_dt %>%
   dplyr::arrange( fdr  ) %>%
   dplyr::pull(feature) -> sig_feats
 
+lm_dt %>%
+  dplyr::mutate()
+ggplot() +
+  geom_point(data=subset(lm_dt, fdr<0.01), aes(x=foldchange, y=-log10(fdr)), col="grey20" ) +
+  geom_point(data=subset(lm_dt, fdr>0.01), aes(x=foldchange, y=-log10(fdr)), col="grey50" ) +
+  geom_hline(yintercept = -log10(0.01), linetype="dashed") + 
+  ggrepel::geom_text_repel(data=head(subset(lm_dt, fdr<0.001), 10), aes(x=foldchange, y=-log10(fdr), label=feature), box.padding = 0.5, max.overlaps = Inf) +
+  labs(x="log2(Fold Change)", y="-log10(FDR)") +
+  theme(panel.background = element_rect(fill = "white", colour = "grey50"),
+        axis.title = element_text(size=18),
+        axis.text = element_text(size=17),
+        legend.title = element_text(size=16),
+        legend.text = element_text(size=16)) +
+  guides(fill="none") -> p10_lm_de_vol
+p10_lm_de_vol
+pfile <- "./results/publication/figures/lm_diff_exp_volcano.png"
+message(sprintf("Saved figure as: %s", pfile))
+ggsave(pfile, plot = p10_lm_de_vol, width = 15, height = 10, units = "in")
 
 # sig_feats <- c("Streptococcus salivarius", "[Clostridium] innocuum", "Collinsella aerofaciens", "Ruthenibacterium lactatiformans", "Streptococcus parasanguinis", "Streptococcus pneumoniae", "Escherichia coli" )
 ```
@@ -445,22 +475,39 @@ lm_dt %>%
 <!-- Create phyloseq object -->
 ```{r}
 # Filter Freq data for only the identified significant features identified by lm
-X_t <- X_t[ rownames(X_t) %in% sig_feats, ]
+all_feats <- rownames(X_t)
+# X_t <- X_t[ rownames(X_t) %in% sig_feats, ]
 rownames(X_t) <- paste0("OTU", 1:nrow(X_t))
 # Create species feature to phylum mapping table
-feat_meta_phylum <- as.matrix(plyr::mapvalues(sig_feats, from=taxonomy_phylum_db$query, to=taxonomy_phylum_db$name, warn_missing = FALSE))
-feat_meta_phylum[feat_meta_phylum %in% feat_meta_csv$feature] <- "Unknown"
-colnames(feat_meta_phylum) <- "Phylum"
-rownames(feat_meta_phylum) <- paste0("OTU", 1:nrow(X_t))
-feat_meta_genus <- plyr::mapvalues(sig_feats, from=taxonomy_db[ rank=="genus"]$query, to=taxonomy_db[ rank=="genus"]$name, warn_missing = FALSE)
-feat_meta_genus[feat_meta_genus %in% feat_meta_csv$feature] <- "Unknown"
-feat_meta_class <- plyr::mapvalues(sig_feats, from=taxonomy_db[ rank=="class"]$query, to=taxonomy_db[ rank=="class"]$name, warn_missing = FALSE)
-feat_meta_class[feat_meta_class %in% feat_meta_csv$feature] <- "Unknown"
-feat_meta_order <- plyr::mapvalues(sig_feats, from=taxonomy_db[ rank=="order"]$query, to=taxonomy_db[ rank=="order"]$name, warn_missing = FALSE)
-feat_meta_order[feat_meta_order %in% feat_meta_csv$feature] <- "Unknown"
-feat_meta_family <- plyr::mapvalues(sig_feats, from=taxonomy_db[ rank=="family"]$query, to=taxonomy_db[ rank=="family"]$name, warn_missing = FALSE)
-feat_meta_family[feat_meta_family %in% feat_meta_csv$feature] <- "Unknown"
-feat_meta_phylum <- cbind(feat_meta_phylum, Class=feat_meta_class, Order=feat_meta_order, Family=feat_meta_family, Genus=feat_meta_genus, Species=sig_feats)
+if (T){
+  feat_meta_phylum <- as.matrix(plyr::mapvalues(all_feats, from=taxonomy_phylum_db$query, to=taxonomy_phylum_db$name, warn_missing = FALSE))
+  feat_meta_phylum[feat_meta_phylum %in% feat_meta_csv$feature] <- "Unknown"
+  colnames(feat_meta_phylum) <- "Phylum"
+  rownames(feat_meta_phylum) <- paste0("OTU", 1:nrow(X_t))
+  feat_meta_genus <- plyr::mapvalues(all_feats, from=taxonomy_db[ rank=="genus"]$query, to=taxonomy_db[ rank=="genus"]$name, warn_missing = FALSE)
+  feat_meta_genus[feat_meta_genus %in% feat_meta_csv$feature] <- "Unknown"
+  feat_meta_class <- plyr::mapvalues(all_feats, from=taxonomy_db[ rank=="class"]$query, to=taxonomy_db[ rank=="class"]$name, warn_missing = FALSE)
+  feat_meta_class[feat_meta_class %in% feat_meta_csv$feature] <- "Unknown"
+  feat_meta_order <- plyr::mapvalues(all_feats, from=taxonomy_db[ rank=="order"]$query, to=taxonomy_db[ rank=="order"]$name, warn_missing = FALSE)
+  feat_meta_order[feat_meta_order %in% feat_meta_csv$feature] <- "Unknown"
+  feat_meta_family <- plyr::mapvalues(all_feats, from=taxonomy_db[ rank=="family"]$query, to=taxonomy_db[ rank=="family"]$name, warn_missing = FALSE)
+  feat_meta_family[feat_meta_family %in% feat_meta_csv$feature] <- "Unknown"
+  feat_meta_phylum <- cbind(feat_meta_phylum, Class=feat_meta_class, Order=feat_meta_order, Family=feat_meta_family, Genus=feat_meta_genus, Species=all_feats)
+} else {
+  feat_meta_phylum <- as.matrix(plyr::mapvalues(sig_feats, from=taxonomy_phylum_db$query, to=taxonomy_phylum_db$name, warn_missing = FALSE))
+  feat_meta_phylum[feat_meta_phylum %in% feat_meta_csv$feature] <- "Unknown"
+  colnames(feat_meta_phylum) <- "Phylum"
+  rownames(feat_meta_phylum) <- paste0("OTU", 1:nrow(X_t))
+  feat_meta_genus <- plyr::mapvalues(sig_feats, from=taxonomy_db[ rank=="genus"]$query, to=taxonomy_db[ rank=="genus"]$name, warn_missing = FALSE)
+  feat_meta_genus[feat_meta_genus %in% feat_meta_csv$feature] <- "Unknown"
+  feat_meta_class <- plyr::mapvalues(sig_feats, from=taxonomy_db[ rank=="class"]$query, to=taxonomy_db[ rank=="class"]$name, warn_missing = FALSE)
+  feat_meta_class[feat_meta_class %in% feat_meta_csv$feature] <- "Unknown"
+  feat_meta_order <- plyr::mapvalues(sig_feats, from=taxonomy_db[ rank=="order"]$query, to=taxonomy_db[ rank=="order"]$name, warn_missing = FALSE)
+  feat_meta_order[feat_meta_order %in% feat_meta_csv$feature] <- "Unknown"
+  feat_meta_family <- plyr::mapvalues(sig_feats, from=taxonomy_db[ rank=="family"]$query, to=taxonomy_db[ rank=="family"]$name, warn_missing = FALSE)
+  feat_meta_family[feat_meta_family %in% feat_meta_csv$feature] <- "Unknown"
+  feat_meta_phylum <- cbind(feat_meta_phylum, Class=feat_meta_class, Order=feat_meta_order, Family=feat_meta_family, Genus=feat_meta_genus, Species=sig_feats)
+}
 # Create phyloseq object
 OTU <- phyloseq::otu_table(X_t, taxa_are_rows = T)
 run_id_to_acvd <- as.data.frame(run_id_to_acvd)
@@ -556,7 +603,7 @@ phyloseq::psmelt(physeq) %>%
   dplyr::mutate(row = ifelse( (Species %in% c("[Ruminococcus]\ngnavus", "Alloprevotella\nsp. E39", "Clostridioides\ndifficile")), 1, 2)) %>%
   ggplot(data = ., aes(x = ACVD, y = log2(Abundance))) +
   geom_boxplot(outlier.shape  = NA) +
-  geom_jitter(aes(color = Species), height = 0, width = .2, alpha=0.1) +
+  geom_jitter(col="grey30", height = 0, width = .2, alpha=0.1) +
   labs(x = "", y = "log2(Abundance)\n") +
   scale_x_discrete(labels= c(`0`="Healthy\nCohort", `1`="ACVD\nCohort")) +
   # facet_grid(row ~ Species, scales = "free") + 
@@ -589,7 +636,7 @@ ggsave(pfile, plot = ptax7, width = 15, height = 10, units = "in")
 ```{r}
 feat_meta_phylum %>%
   as.data.frame() %>%
-  # dplyr::filter( Species %in% sig_feats ) %>%
+  dplyr::filter( Species %in% sig_feats ) %>%
   dplyr::filter( Genus %in% "Bacteroides" ) %>%
   dplyr::pull(Species) -> sig_bacterioides
 
@@ -600,28 +647,81 @@ lm_dt %>%
   fwrite("./results/publication/tables/lm_de_significant_hits_at_0.01_fdr_bacterioides.csv")
 
 phyloseq::psmelt(subset_taxa(physeq, Genus == "Bacteroides")) %>%
-  dplyr::filter(Species %in% sig_bacterioides[c(1,2,5)]) %>%
+  dplyr::filter(Species %in% sig_bacterioides) %>%
   dplyr::filter(Abundance!=0) %>%
+  dplyr::filter(!is.na(Abundance)) %>%
   ggplot(data = ., aes(x = ACVD, y = log2(Abundance))) +
   # ggplot(data = ., aes(fill = ACVD, x = log2(Abundance))) +
-  geom_density(alpha=0.3) +
-  geom_boxplot(outlier.shape  = NA) +
-  geom_jitter(aes(color = Genus), height = 0, width = .2, alpha=0.1) +
+  # geom_density(alpha=0.3) +
+  # geom_boxplot(outlier.shape  = NA) +
+  # geom_jitter(aes(color = Species), height = 0, width = .2, alpha=0.1) +
+  geom_violin(fill = "grey", alpha=0.5) +
+  geom_boxplot(width=0.1) +
   labs(x = "", y = "Abundance\n") +
   scale_x_discrete(labels= c(`0`="Healthy Cohort", `1`="ACVD Cohort")) +
-  facet_wrap(~ Genus, scales = "free") +
-  # facet_wrap(~ Species, scales = "free") +
+  # facet_wrap(~ Genus, scales = "free") +
+  facet_wrap(~ Species, scales = "free") +
   # facet_wrap( Species ~ Gender, scales = "free") +
   theme(axis.title = element_text(size=16),
         axis.text = element_text(size=15),
         legend.title = element_text(size=15),
         legend.text = element_text(size=14),
-        strip.text.x = element_text(size=15)) -> ptax8
+        strip.text.x = element_text(size=15)) +
+  guides(fill="none") -> ptax8
 ptax8
 pfile <- "./results/publication/figures/50K_lm_0.01_fdr_bacterioides_species_boxplot.png"
 message(sprintf("Saved figure as: %s", pfile))
 ggsave(pfile, plot = ptax8, width = 15, height = 10, units = "in")
+
+
 ```
+
+```{r}
+feat_meta_phylum %>%
+  as.data.frame() %>%
+  # dplyr::filter( !(Species %in% sig_feats) ) %>%
+  dplyr::filter( Genus %in% "Bacteroides" ) %>%
+  dplyr::pull(Species) -> total_bacterioides
+
+feat_meta_phylum %>%
+  as.data.frame() %>%
+  dplyr::filter( (Species %in% sig_feats) ) %>%
+  dplyr::filter( Genus %in% "Bacteroides" ) %>%
+  dplyr::pull(Species) -> sig_bacterioides
+
+feat_meta_phylum %>%
+  as.data.frame() %>%
+  dplyr::filter( !(Species %in% sig_feats) ) %>%
+  dplyr::filter( Genus %in% "Bacteroides" ) %>%
+  dplyr::pull(Species) -> non_sig_bacterioides
+
+phyloseq::psmelt(subset_taxa(physeq, Genus == "Bacteroides")) %>%
+  # dplyr::filter(Species %in% sig_bacterioides[c(1,2,5)]) %>%
+  dplyr::filter(Abundance!=0) %>%
+  ggplot(data = ., aes(x = ACVD, y = log2(Abundance))) +
+  # ggplot(data = ., aes(fill = ACVD, x = log2(Abundance))) +
+  # geom_density(alpha=0.3) +
+  # geom_boxplot(outlier.shape  = NA) +
+  # geom_jitter(aes(color = Species), height = 0, width = .2, alpha=0.1) +
+  geom_violin(aes(fill = ACVD), alpha=0.5) +
+  geom_boxplot(width=0.1) +
+  labs(x = "", y = "Abundance\n") +
+  scale_x_discrete(labels= c(`0`="Healthy\nCohort", `1`="ACVD\nCohort")) +
+  # facet_wrap(~ Genus, scales = "free") +
+  facet_wrap(~ Species, scales = "free") +
+  # facet_wrap( Species ~ Gender, scales = "free") +
+  theme(axis.title = element_text(size=16),
+        axis.text = element_text(size=15),
+        legend.title = element_text(size=15),
+        legend.text = element_text(size=14),
+        strip.text.x = element_text(size=15)) +
+  guides(fill="none") -> ptax8
+ptax8
+pfile <- "./results/publication/figures/50K_non_sig_bacterioides_species_boxplot.png"
+message(sprintf("Saved figure as: %s", pfile))
+ggsave(pfile, plot = ptax8, width = 15, height = 10, units = "in")
+```
+
 
 ```{r}
 phyloseq::plot_bar(subset_taxa(physeq, Genus == "Bacteroides"), fill = "Genus") +
@@ -879,14 +979,14 @@ auc_sd <- sd(auc)
 ggplot() +
   geom_line(data = roc_pdata, aes(x=fpr, y=tpr, col=`CV-fold`), linetype="solid", alpha=0.3) +
   geom_line(data=roc_pdata_mean, aes(x=mean_fpr, y=mean_tpr, col=`CV-fold`), linetype="dashed") +
-  geom_line(data=roc_pdata_mean, aes(x=mean_fpr, y=mean_tpr-sd_tpr), col="blue", alpha=0.4) +
-  geom_line(data=roc_pdata_mean, aes(x=mean_fpr, y=mean_tpr+sd_tpr), col="blue", alpha=0.4) +
-  geom_ribbon(data=roc_pdata_mean,  aes(x=mean_fpr, y=mean_tpr+sd_tpr, xmin=min(mean_fpr), xmax=max(mean_fpr), ymin=mean_tpr-sd_tpr, ymax=mean_tpr+sd_tpr), fill="blue", alpha=0.4) +
-  geom_abline(intercept=0, slope=1, col="red", linetype="dotted") +
+  geom_line(data=roc_pdata_mean, aes(x=mean_fpr, y=mean_tpr-sd_tpr), col="#0c0c0c", alpha=0.4) +
+  geom_line(data=roc_pdata_mean, aes(x=mean_fpr, y=mean_tpr+sd_tpr), col="#0c0c0c", alpha=0.4) +
+  geom_ribbon(data=roc_pdata_mean,  aes(x=mean_fpr, y=mean_tpr+sd_tpr, xmin=min(mean_fpr), xmax=max(mean_fpr), ymin=mean_tpr-sd_tpr, ymax=mean_tpr+sd_tpr), fill="#0c0c0c", alpha=0.4) +
+  geom_abline(intercept=0, slope=1, col="black", linetype="dotted") +
   scale_color_manual(labels =  
                        c(unlist(lapply(seq(1,length(auc)), function(i){sprintf("ROC fold %s (AUC = %s)", i, round(auc[[i]], 3))})),
                          sprintf("Mean ROC (AUC = %s ± %s)", round(auc_mean, 3), round(auc_sd, 3))), 
-                     values = c('#F8766D', '#D89000', '#A3A500', '#39B600', '#00BF7D', '#00BFC4', '#00B0F6', '#9590FF', '#E76BF3', '#FF62BC', "blue")) +
+                     values = c('#f3f3f3', '#dcdcdc', '#c5c5c5', '#aeaeae', '#979797', '#808080', '#686868', '#515151', '#3a3a3a', '#232323', "#0c0c0c")) +
   # geom_vline(xintercept=0.05, color="red", linetype="dotted") +
   labs(x="False Positive Rate", y="True Positive Rate", color="") +
   theme(panel.background = element_rect(fill = "white", colour = "grey50"),
@@ -933,15 +1033,15 @@ auc_sd <- sd(auc)
 ggplot() +
   geom_line(data = pr_pdata, aes(x=rec, y=prec, col=`CV-fold`), alpha=0.3) +
   geom_line(data=pr_pdata_mean, aes(x=mean_rec, y=mean_prec, col=`CV-fold`), linetype="dashed") +
-  geom_line(data=pr_pdata_mean, aes(x=mean_rec, y=mean_prec-sd_prec), col="blue", alpha=0.4) +
-  geom_line(data=pr_pdata_mean, aes(x=mean_rec, y=ifelse(mean_prec+sd_prec>1, 1, mean_prec+sd_prec)), col="blue", alpha=0.4) +
-  geom_ribbon(data=pr_pdata_mean,  aes(x=mean_rec, y=mean_prec, xmin=min(mean_rec), xmax=max(mean_rec), ymin=mean_prec-sd_prec, ymax=ifelse(mean_prec+sd_prec>1, 1, mean_prec+sd_prec)), fill="blue", alpha=0.4) +
-  geom_abline(intercept=1, slope=-1, col="red", linetype="dotted") +
+  geom_line(data=pr_pdata_mean, aes(x=mean_rec, y=mean_prec-sd_prec), col="0c0c0c", alpha=0.4) +
+  geom_line(data=pr_pdata_mean, aes(x=mean_rec, y=ifelse(mean_prec+sd_prec>1, 1, mean_prec+sd_prec)), col="0c0c0c", alpha=0.4) +
+  geom_ribbon(data=pr_pdata_mean,  aes(x=mean_rec, y=mean_prec, xmin=min(mean_rec), xmax=max(mean_rec), ymin=mean_prec-sd_prec, ymax=ifelse(mean_prec+sd_prec>1, 1, mean_prec+sd_prec)), fill="0c0c0c", alpha=0.4) +
+  geom_abline(intercept=1, slope=-1, col="black", linetype="dotted") +
   # geom_hline(yintercept=0.95, color="red", linetype="dotted")+
   scale_color_manual(labels =  
                        c(unlist(lapply(seq(1,length(auc)), function(i){sprintf("PR fold %s (AUCPR = %s)", i, round(auc[[i]], 3))})),
                          sprintf("Mean PR (AUCPR = %s ± %s)", round(auc_mean, 3), round(auc_sd, 3))), 
-                     values = c('#F8766D', '#D89000', '#A3A500', '#39B600', '#00BF7D', '#00BFC4', '#00B0F6', '#9590FF', '#E76BF3', '#FF62BC', "blue")) +
+                     values = c('#f3f3f3', '#dcdcdc', '#c5c5c5', '#aeaeae', '#979797', '#808080', '#686868', '#515151', '#3a3a3a', '#232323', "#0c0c0c")) +
   labs(x="Recall", y="Precision") +
   theme(panel.background = element_rect(fill = "white", colour = "grey50"),
         axis.title = element_text(size=18),
@@ -964,14 +1064,16 @@ ggsave(pfile, plot = pr_p, width = 9, height = 6, units = "in")
 # Load PCA data
 pca_dt <- data.table::fread("./results/publication/data/50K_PCA.csv")
 pca_dt$`ACVD status` <- as.factor(pca_dt$`ACVD status`)
+pca_dt$`ACVD status` <- plyr::mapvalues(pca_dt$`ACVD status`, from = c(0, 1), to = c("Healthy", "ACVD"))
+
 # Get Variances explained
 vars_transformed <- apply(dplyr::select(pca_dt, -V1, -`ACVD status`), 2, var)
 total_var_explained <- vars_transformed/sum(vars_transformed)
 # Generate Plot for PC1-PC2
-ggplot(pca_dt, aes(x=PC1, y=PC2, col=`ACVD status`)) +
+ggplot(pca_dt, aes(x=PC1, y=PC2, col=`ACVD status`, shape=`ACVD status`)) +
   geom_point() +
   scale_color_manual(labels = c("Healthy", "ACVD"), 
-                     values = c("0"="blue", "1"="red")) +
+                     values = c("Healthy"="#bfbfbf", "ACVD"="#404040")) +
   labs(x=sprintf("PC1 (%s%%)", round(total_var_explained[1],4)*100), y=sprintf("PC2 (%s%%)", round(total_var_explained[2],4)*100)) +
   theme(panel.background = element_rect(fill = "white", colour = "grey50"),
         axis.title = element_text(size=18),
@@ -984,10 +1086,10 @@ message(sprintf("Saved figure as: %s", pfile))
 ggsave(pfile, plot = pca1p, width = 10, height = 7, units = "in")
 
 # Generate Plot for PC2-PC3
-ggplot(pca_dt, aes(x=PC3, y=PC2, col=`ACVD status`)) +
+ggplot(pca_dt, aes(x=PC3, y=PC2, col=`ACVD status`, shape=`ACVD status`)) +
   geom_point() +
   scale_color_manual(labels = c("Healthy", "ACVD"), 
-                     values = c("0"="blue", "1"="red")) +
+                     values = c("Healthy"="#bfbfbf", "ACVD"="#404040")) +
   labs(x=sprintf("PC3 (%s%%)", round(total_var_explained[3],4)*100), y=sprintf("PC2 (%s%%)", round(total_var_explained[2],4)*100)) +
   theme(panel.background = element_rect(fill = "white", colour = "grey50"),
         axis.title = element_text(size=18),
@@ -1000,10 +1102,10 @@ message(sprintf("Saved figure as: %s", pfile))
 ggsave(pfile, plot = pca2p, width = 10, height = 7, units = "in")
 
 # Generate Plot for PC3-PC4
-ggplot(pca_dt, aes(x=PC3, y=PC4, col=`ACVD status`)) +
+ggplot(pca_dt, aes(x=PC3, y=PC4, col=`ACVD status`, shape=`ACVD status`)) +
   geom_point() +
   scale_color_manual(labels = c("Healthy", "ACVD"), 
-                     values = c("0"="blue", "1"="red")) +
+                     values = c("Healthy"="#bfbfbf", "ACVD"="#404040")) +
   labs(x=sprintf("PC3 (%s%%)", round(total_var_explained[3],4)*100), y=sprintf("PC4 (%s%%)", round(total_var_explained[4],4)*100)) +
   theme(panel.background = element_rect(fill = "white", colour = "grey50"),
         axis.title = element_text(size=16),
